# asexthook

./: .gitignore  .gitmodules  ASBinaryStringBuilder.cpp  ASBinaryStringBuilder.h  CASBaseObject.cpp  CASBaseObject.h  CASBinaryStringBuilder.cpp  CASBinaryStringBuilder.h  CASSQLite.cpp  CASSQLite.h  CMakeLists.txt  Config.mak  README.md  angelscript.cpp  angelscript.h  angelscriptlib.h  asext_api.h  asexthook.sln  asexthook.vcxproj  asexthook.vcxproj.filters  dllapi.cpp  dlldef.h  engine_api.cpp  enginedef.h  meta_api.cpp  qrcodegen.cpp  qrcodegen.hpp  shar_obj.cpp  share_obj.cpp  share_obj.h  signatures.h  utility.h  vftable.cpp  vftable.h
.github/workflows/: build.yml  release.yml
docs/: AITRIGGER.htm  AITRIGGER.html  ALERT_TYPE.htm  ALERT_TYPE.html  Activity.htm  Activity.html  AddPlayerItemResult.htm  AddPlayerItemResult.html  AdminLevel_t.htm  AdminLevel_t.html  ArgumentType.htm  ArgumentType.html  Arguments.htm  Arguments.html  BLOB.htm  BLOB.html  BLOOD_COLOR.htm  BLOOD_COLOR.html  BREAK.htm  BREAK.html  BaseEntity.htm  BaseEntity.html  BaseItem.htm  BaseItem.html  BaseMonster.htm  BaseMonster.html  BasePlayerAmmo.htm  BasePlayerAmmo.html  BasePlayerItem.htm  BasePlayerItem.html  BasePlayerWeapon.htm  BasePlayerWeapon.html  BaseTank.htm  BaseTank.html  BeamFlags.htm  BeamFlags.html  BeamType.htm  BeamType.html  Bullet.htm  Bullet.html  (+468 more)
example/: CBinaryStringBuilder.as  CSQLite.as  classmemcpy.as  crc32.as
src/angelscript/: angelscriptlib.h
src/header/: CASBaseObject.h  CASBinaryStringBuilder.h  CASSQLGrid.h  CASSQLItem.h  CASSQLite.h  angelscript.h  dlldef.h  enginedef.h  extern_hook.h  signatures.h  utility.h  vftable.h
src/source/: CASBaseObject.cpp  CASBinaryStringBuilder.cpp  CASSQLGrid.cpp  CASSQLItem.cpp  CASSQLite.cpp  angelscript.cpp  dll_hook.cpp  dllapi.cpp  dllmain.cpp  engine_api.cpp  engine_hook.cpp  meta_api.cpp  vftable.cpp
